<resources>
    <string name="app_name">Shaft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="action_import">从剪切板导入</string>
    <string name="action_qcode">扫描二维码</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="empty_list_1">居然啥也没有</string>
    <string name="empty_list_2">居然啥也没有</string>
    <string name="empty_list_3">居然啥也没有</string>
    <string name="empty_list_4">居然啥也没有</string>
    <string name="empty_list_5">居然啥也没有</string>
    <string name="empty_list_6">居然啥也没有</string>
    <string name="empty_list_7">居然啥也没有</string>
    <string name="empty_list_8">居然啥也没有</string>
    <string name="post_follow">关注</string>
    <string name="post_unfollow">取关</string>
    <string name="double_click_finish">再按一次退出~</string>
    <string name="delete_all">删除全部</string>
    <string name="illust_filter">筛选</string>
    <string name="share_illust">%1$s | %2$s #Pixiv %3$s</string>
    <string name="share">分享</string>
    <string name="webview_handler_open_in_browser">在浏览器中打开</string>
    <string name="webview_handler_copy_link_addr">复制链接地址</string>
    <string name="webview_handler_copy_link_text">复制链接文本</string>
    <string name="webview_handler_download_link">下载链接</string>
    <string name="webview_handler_share">分享链接</string>
    <string name="webview_handler_open_image">打开图片</string>
    <string name="webview_handler_search_with_ggl">在 Google 中搜索此图片</string>
    <string name="copy_to_clipboard">已复制</string>
    <string name="now_login">登录（需要开代理）</string>
    <string name="has_no_account">没有账号?</string>
    <string name="go_to_login">我要登录</string>
    <string name="now_sign">注册（需要开代理）</string>
    <string name="website_users">users</string>
    <string name="website_illust">illusts</string>
    <string name="see_download_task">查看任务</string>
    <string name="the_others">其他</string>
    <string name="search_image_origin">以图搜源</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">全屏测试</string>
    <string name="pixiv_use_detail">服务条款</string>
    <string name="privacy">隐私政策</string>
    <string name="about_app">关于</string>
    <string name="pixiv_special">PixiVision特辑</string>
    <string name="pixiv_problem">常见问题</string>
    <string name="project_license">License</string>
    <string name="select_inner_storage">请选择本机内置存储</string>
    <string name="walkthrough">画廊</string>
    <string name="latest_work">最新</string>
    <string name="search">搜索</string>
    <string name="develop">开发者预览</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannot_download">你下你🐴呢？</string>
    <string name="image_alredy_exist">图片已存在</string>
    <string name="has_been_added">个项目已加入下载队列</string>
    <string name="type_illust">插画</string>
    <string name="type_manga">漫画</string>
    <string name="type_walk_through">画廊</string>
    <string name="type_novel">小说</string>
    <string name="type_live">直播</string>
    <string name="public_like_illust">公开收藏</string>
    <string name="private_like_illust">私人收藏</string>
    <string name="public_like_user">公开关注</string>
    <string name="private_like_user">私人关注</string>
    <string name="private_like_novel">私人收藏小说</string>
    <string name="public_like_novel">公开收藏小说</string>
    <string name="bookmark">收藏夹</string>
    <string name="filter_by_bookmark">按标签筛选</string>
    <string name="access_denied">请给与足够的权限</string>
    <string name="view_history">浏览记录</string>
    <string name="muted_history">屏蔽记录</string>
    <string name="app_settings">设置</string>
    <string name="full_about_app">关于软件</string>
    <string name="no_mail_address">未绑定邮箱</string>
    <string name="shaft_hint">Shaft 提示</string>
    <string name="you_have_download_plan">你还有未下载完成的任务，确定退出吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="now_downloading">正在下载</string>
    <string name="has_download">已完成</string>
    <string name="has_copyed">已复制到剪贴板</string>
    <string name="no_info">暂无信息</string>
    <string name="like_success_public">关注成功~(公开的)</string>
    <string name="like_success_private">关注成功~(非公开的)</string>
    <string name="like_novel_success_public">收藏成功~(公开的)</string>
    <string name="like_novel_success_private">收藏成功~(非公开的)</string>
    <string name="cancel_like">取消关注~</string>
    <string name="cancel_like_illust">取消收藏</string>
    <string name="like_illust_success">收藏成功</string>
    <string name="how_about_trending">动态页面展示谁的作品？</string>
    <string name="recomment_user">推荐用户</string>
    <string name="you_mother_fucker_want_to_read_novel">啥？您还想看日语小说？？</string>
    <string name="user_info">详细信息</string>
    <string name="how_many_illust_works">%d件作品</string>
    <string name="user_main_page">个人主页</string>
    <string name="user_collections">收藏夹</string>
    <string name="download_manager">下载管理</string>
    <string name="recommend_illust">推荐作品</string>
    <string name="illust_grid_widget_label">插画图片墙</string>
    <string name="recommend_novel">推荐小说</string>
    <string name="novel_tag">小说标签</string>
    <string name="hot_tag">热门标签</string>
    <string name="ranking_illust">排行榜</string>
    <string name="see_more">查看更多</string>
    <string name="recommend_user">推荐用户</string>
    <string name="recommend">推荐</string>
    <string name="discover">发现</string>
    <string name="whats_new">动态</string>
    <string name="account">账号</string>
    <string name="account_manage">账号管理</string>
    <string name="login_out">退出登录</string>
    <string name="normal">常规</string>
    <string name="open_direct_connection">开启直连(自行代理或在墙外，可以关闭)</string>
    <string name="see_pixiv_ez">详见 Notsfsssf/Pix-EzViewer</string>
    <string name="show_original_image">图片详情展示原图</string>
    <string name="delete_star_illust">搜索结果过滤已收藏</string>
    <string name="filter_rank_bookmarked">排行榜过滤已收藏</string>
    <string name="save_view_history">保存浏览历史</string>
    <string name="single_download_task">保持一个任务在下载中(保证下载顺序)</string>
    <string name="double_stagger_data">动态页面双列瀑布流</string>
    <string name="show_like_button">列表页展示收藏按钮</string>
    <string name="slide_down_endless">相关作品无限下滑（可能出现重复）</string>
    <string name="other_settings">其他</string>
    <string name="search_result_filter">搜索结果收藏量筛选</string>
    <string name="language">语言</string>
    <string name="language_follow_system">跟随系统</string>
    <string name="theme_mode">主题模式</string>
    <string name="custom_file_name">自定义下载文件名</string>
    <string name="file_name_type">文件命名格式</string>
    <string name="download_path">下载路径</string>
    <string name="illust_download_path">图片下载路径</string>
    <string name="novel_txt_download_path">小说TXT保存路径</string>
    <string name="gif_unzip_path">GIF压缩包解压路径</string>
    <string name="gif_zip_path">GIF压缩包存放路径</string>
    <string name="gif_result_path">GIF生成路径</string>
    <string name="please_restart_app">重启软件后生效</string>
    <string name="finding_datas">资源解析中</string>
    <string name="dont_catch_me">
        1、本应用为日本插画交流网站 Pixiv 的安卓客户端第三方重制版 .\n2、项目已开源且仅做交流和学习使用，不得用于任何商业用途。\n3、APP 内所有插画、漫画、小说作品版权均归属于其著作者或 Pixiv 所有\n4、推荐使用原版 Pixiv。
   </string>
    <string name="clear">清空</string>
    <string name="daily_rank">日榜</string>
    <string name="weekly_rank">每周</string>
    <string name="monthly_rank">每月</string>
    <string name="man_like">男性向</string>
    <string name="woman_like">女性向</string>
    <string name="self_done">原创</string>
    <string name="new_fish">新人</string>
    <string name="r_eighteen">今日R</string>
    <string name="r_eighteen_weekly_rank">本周R</string>
    <string name="r_eighteen_male_rank">男性R</string>
    <string name="r_eighteen_female_rank">女性R</string>
    <string name="r_eighteen_ai_rank">AI生成R</string>
    <string name="r_eighteen_guro_rank">本周G</string>
    <string name="ranking_list">排行榜</string>
    <string name="recmd_for_you">为你推荐</string>
    <string name="email_address">邮箱地址</string>
    <string name="operate_success">操作成功</string>
    <string name="save">保存</string>
    <string name="shoud_not_be_empty">不应为空</string>
    <string name="never_show_again">不再显示</string>
    <string name="add">添加</string>
    <string name="fullscreen_layout">全屏布局</string>
    <string name="how_many_novels">%1$d个作品，%2$d个字，看完需要：%3$d小时 %4$d分钟</string>
    <string name="scroll_behavior">ceui.lisa.pixiv.ScrollBehavior</string>
    <string name="head_behavior">ceui.lisa.pixiv.HeadBehavior</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="file_path">路径：</string>
    <string name="add_account">添加账号</string>
    <string name="read_latest_episode">阅读最新话</string>
    <string name="view_latest_episode">查看最新话</string>
    <string name="watchlist">追更列表</string>
    <string name="episode_number">%d话</string>
    <string name="add_to_watchlist">加入追更列表</string>
    <string name="already_in_your_watchlist">已加入追更列表</string>
    <string name="read_latest_episode_with_num">阅读最新一话(#%1$d)</string>
    <string name="string_1">屏蔽设置</string>
    <string name="string_2">开发者预览</string>
    <string name="string_3">分享</string>
    <string name="string_4">+ 关注</string>
    <string name="string_5">下载</string>
    <string name="string_6">收藏</string>
    <string name="string_7">下载图片</string>
    <string name="string_9">用户名/邮箱账号</string>
    <string name="string_10">密码</string>
    <string name="string_12">用户名（可随时变更）</string>
    <string name="string_13">+ 关 注</string>
    <string name="string_14">添加</string>
    <string name="string_15">修改背景色</string>
    <string name="string_16">屏蔽标签</string>
    <string name="string_18">取消</string>
    <string name="string_19">添加屏蔽</string>
    <string name="string_20">全部选择</string>
    <string name="string_21">取消全选</string>
    <string name="string_22">导出下载链接</string>
    <string name="string_24">版本名称：</string>
    <string name="string_25">版本型号：</string>
    <string name="string_26">软件</string>
    <string name="string_27">项目</string>
    <string name="string_28">申明</string>
    <string name="string_29">捐助作者</string>
    <string name="string_30">捐赠者列表</string>
    <string name="string_31">Github</string>
    <string name="string_32">https://github.com/CeuiLiSA/Pixiv-Shaft</string>
    <string name="string_33">个人介绍：</string>
    <string name="string_34">个人主页：</string>
    <string name="string_35">Twitter：</string>
    <string name="string_36">Pawoo：</string>
    <string name="string_37">电脑：</string>
    <string name="string_38">显示器：</string>
    <string name="string_39">软体：</string>
    <string name="string_40">扫描仪：</string>
    <string name="string_41">数位板：</string>
    <string name="string_42">鼠标：</string>
    <string name="string_43">打印机：</string>
    <string name="string_44">桌上物品：</string>
    <string name="string_45">绘画音乐：</string>
    <string name="string_46">桌子：</string>
    <string name="string_47">椅子：</string>
    <string name="string_48">暂无内容</string>
    <string name="history_count_format">共 %1$d 条</string>
    <string name="string_49">留下你的评论吧</string>
    <string name="string_50">捐赠</string>
    <string name="string_51">pixiv ID (限小写英文和数字)</string>
    <string name="string_52">新密码</string>
    <string name="string_53">更新账号信息</string>
    <string name="string_147">好P友：</string>
    <string name="string_145">关注：</string>
    <string name="string_422">个人中心</string>
    <string name="follow">关注</string>
    <string name="unfollow">取关</string>
</resources>