<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:hint="@string/email_address"
                app:hintTextColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pixiv_id_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:hint="@string/string_51"
                app:hintTextColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pixiv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_old_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:hint="@string/string_10"
                android:visibility="gone"
                app:hintTextColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_text"
                    android:singleLine="true"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:hint="@string/string_52"
                app:hintTextColor="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_text"
                    android:singleLine="true"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progress"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

        </ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:text="@string/string_53"
            android:layout_margin="@dimen/sixteen_dp"
            android:textColor="@color/white"
            android:background="@drawable/primary_round_bg"
            android:id="@+id/submit"
            android:layout_height="wrap_content">

        </Button>
    </RelativeLayout>