<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/bottom_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/logo_final" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/login_button"
                style="@style/textMontserratSemiBold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_corner_shining_btn_blue"
                android:gravity="center"
                android:text="@string/now_login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/browser_login_button"
                style="@style/textMontserratSemiBold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_corner_shining_btn_blue"
                android:gravity="center"
                android:text="@string/login_with_browser"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_button"
                style="@style/textMontserratSemiBold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_corner_shining_btn_blue"
                android:gravity="center"
                android:text="@string/now_sign"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/checkbox_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="34dp">

                <FrameLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp">

                    <ImageView
                        android:id="@+id/terms_check_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/terms_checkbox"
                        app:tint="?attr/colorPrimary" />

                </FrameLayout>

                <TextView
                    android:id="@+id/first_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>